# scratchmark

./: .gitignore  Cargo.toml  Multiproject Checklist.md  NIX_SETUP.md  README.md  build.rs  deny.toml  flake.nix  meson.build  meson.options  update_translations.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature_request.md
.github/workflows/: appimage.yml  ci.yml  flatpak.yml  weblate.yml
build-aux/: .gitignore  fi.sevonj.TheftMD.yml  generate_flatpak.sh  org.scratchmark.Scratchmark.yml  sources.sh
data/: meson.build  org.scratchmark.Scratchmark.desktop.in  org.scratchmark.Scratchmark.gschema.xml  org.scratchmark.Scratchmark.metainfo.xml  org.scratchmark.Scratchmark.metainfo.xml.in  repository-open-graph.kra
data/document_preview/: meson.build  preview-style.xml
data/editor_schemes/: meson.build  scratchmark.xml
data/icons/: meson.build
data/language_specs/: markdown.lang  meson.build
data/resources/: gresources.xml  meson.build
po/: .gitignore  LINGUAS  POTFILES.in  POTFILES.in.in  Scratchmark.pot  es.po  et.po  fi.po  meson.build  pl.po  pt_BR.po  ru.po  scratchmark.pot  tr.po  update_POTFILES.sh  update_potfiles.py  verify_POTFILES.sh  verify_potfiles.py  zh_CN.po
repo-tools/: pot_check.py  pot_update.py
resources/: fi.sevonj.TheftMD.desktop  gresources.xml  org.scratchmark.Scratchmark.desktop
resources/editor_schemes/: scratchmark.xml  theftmd.xml
resources/editor_style/: theftmd.xml
resources/ui/: folder_rename_popover.ui  library_browser.ui  library_folder.ui  library_folder_context_menu.ui  library_root_folder.ui  library_sheet.ui  library_sheet_button.ui  window.ui  (+5 more)
scripts/: AppRun.in  README.md  build-appimage.sh
src/: config.rs  error.rs  main.rs  meson.build  settings.rs  util.rs
(+111 files in other folders)
