[package]
name = "scratchmark"
version = "1.0.1"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
adw = { version = "0.7.2", package = "libadwaita", features = ["v1_5"] }
gtk = { version = "0.9.6", package = "gtk4", features = ["v4_14"] }
sourceview5 = "0.9.1"

[features]
# Search for data files in install locations instead of source tree.
installed = []

[build-dependencies]
glib-build-tools = "0.20.0"
