[package]
name = "scratchmark"
version = "1.7.1"
license = "GPL-3.0-or-later"
edition = "2024"

[dependencies]
adw = { version = "0.8.1", package = "libadwaita", features = ["v1_5"] }
async-channel = "2.5.0"
gtk = { version = "0.10.3", package = "gtk4", features = ["v4_14"] }
sourceview5 = "0.10.0"
gettext-rs = { version = "0.7", features = ["gettext-system"] }
regex = "1.12.2"

[features]
# Search for data files in install locations instead of source tree.
installed = []
# For generating screenshots for packaging. Uses default window size and loads demo library. 
# Don't build a flatpak with this.
generatescreenshots = []

[build-dependencies]
glib-build-tools = "0.21.0"
